# rustready-rust-tui-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  main.rs  tui.rs
