[package]
name = "rustready-rust-tui-core"
version = "0.1.0"
edition = "2024"
authors = ["RustReadyDev <rustreadydev@gmail.com>"]
description = "A lightweight Rust TUI template for building terminal user interfaces"
license = "MIT"
repository = "https://github.com/rustreadydev/rustready-rust-tui-core"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
anyhow = "1.0.98"
ratatui = "0.29.0"
crossterm = "0.29.0"

[dev-dependencies]
tempfile = "3.20.0"